# CMakeLearn

./: CMakeCache.txt  Makefile  README.md  cmake_install.cmake
t1/: CMakeLists.txt  main.c
t2/: CMakeLists.txt  README
t2/doc/: hello.txt
t2/src/: CMakeLists.txt  main.c
t3/: README
t3/lib/: CMakeLists.txt  hello.c  hello.h
t4/: CMakeLists.txt  README
t4/src/: CMakeLists.txt  main.c
